<resources>
    <string name="upomp_bypay_sessionhint">由于您过长时间未操作，此次交易已失效，请退出支付，并重新进行交易。是否立即退出支付？</string>
    <string name="upomp_bypay_error">错误</string>
    <string name="upomp_bypay_linkerror">网络连接错误，请重新尝试！</string>
    <string name="upomp_bypay_fileerror">系统检测到您的手机POS已被恶意修改，为确保您的支付安全，请重新安装使用！</string>
    <string name="upomp_bypay_please">"请过 "</string>
    <string name="upomp_bypay_sendMac">" 秒后再发送验证码!"</string>
    <string name="upomp_bypay_get">获取</string>
    <string name="upomp_bypay_debitcard">借记卡</string>
    <string name="upomp_bypay_creditcard">信用卡</string>
    <string name="upomp_bypay_sixtotwenty">6~20位字符组合</string>
    <string name="upomp_bypay_sixtotwelve">6~12位字符组合</string>
    <string name="upomp_bypay_twotosixteen">2~16位字符组合</string>
    <string name="upomp_bypay_firstmobilenum">手 机 号 码 :</string>
    <string name="upomp_bypay_secondmobilenum">手机号码</string>
    <string name="upomp_bypay_thirdmobilenum">手机号码:</string>
    <string name="upomp_bypay_loading">登录</string>
    <string name="upomp_bypay_register">注册</string>
    <string name="upomp_bypay_username">"用   户   名  :"</string>
    <string name="upomp_bypay_firstshortmessagesecuritycode">短信验证码:</string>
    <string name="upomp_bypay_secondshortmessagesecuritycode">6位短信验证码</string>
    <string name="upomp_bypay_selectcard">选 择 卡 种 :</string>
    <string name="upomp_bypay_firstcardid">银行卡卡号:</string>
    <string name="upomp_bypay_secondcardid">银行卡卡号</string>
    <string name="upomp_bypay_firstcardpsw">银行卡密码:</string>
    <string name="upomp_bypay_secondcardpsw">银行卡密码</string>
    <string name="upomp_bypay_welcome">页面欢迎语:</string>
    <string name="upomp_bypay_hint">若与您预设的资料不符，极有可能是钓鱼软件，请终止操作。</string>
    <string name="upomp_bypay_editpass">修改密码</string>
    <string name="upomp_bypay_editinfo">更改手机号码</string>
    <string name="upomp_bypay_addcard">添加银行卡</string>
    <string name="upomp_bypay_selectdate">请选择有效期。</string>
    <string name="upomp_bypay_date">"有   效   期  :"</string>
    <string name="upomp_bypay_securityissue">安 全 问 题 :</string>
    <string name="upomp_bypay_securityquestionanswer">问 题 答 案 :</string>
    <string name="upomp_bypay_checkcode">"校   验   码  :"</string>
    <string name="upomp_bypay_payamount">支 付 金 额 :</string>
    <string name="upomp_bypay_backnum">信用卡背面末三位数字</string>
    <string name="upomp_bypay_affirm">确认</string>
    <string name="upomp_bypay_return">返回</string>
    <string name="upomp_bypay_failcause">失败原因:</string>
    <string name="upomp_bypay_cardmanage">银行卡管理</string>
    <string name="upomp_bypay_gantan">！</string>
    <string name="upomp_bypay_next">下一步</string>
    <string name="upomp_bypay_cancel">取消</string>
    <string name="upomp_bypay_getpass">忘记密码</string>
    <string name="upomp_bypay_cardtype">" 卡 类 型 :"</string>
    <string name="upomp_bypay_returnlist">返回列表</string>
    <string name="upomp_bypay_cardunknown">未知卡</string>
    <string name="upomp_bypay_removecard">解除关联</string>
    <string name="upomp_bypay_affirmremovecard">确认要解除关联本银行卡？[</string>
    <string name="upomp_bypay_changedefultcard">默认卡变更</string>
    <string name="upomp_bypay_affirmchangedefultcard">是否设置本卡为默认卡？[</string>
    <string name="upomp_bypay_prompt">提示</string>
    <string name="upomp_bypay_selectsucceed">设置成功！</string>
    <string name="upomp_bypay_selectfail">设置失败，请重新尝试！</string>
    <string name="upomp_bypay_updatelist">更新列表</string>
    <string name="upomp_bypay_balance">余额查询</string>
    <string name="upomp_bypay_changepswsucceed">修改密码成功!</string>
    <string name="upomp_bypay_newpsw">"新   密   码  :"</string>
    <string name="upomp_bypay_enternewpsw">确认新密码:</string>
    <string name="upomp_bypay_logined">已登录</string>
    <string name="upomp_bypay_payfail">支付失败</string>
    <string name="upomp_bypay_yuan">" 元"</string>
    <string name="upomp_bypay_accountmainactivity_header">我的信息</string>
    <string name="upomp_bypay_accountmain_myinfo">个人信息</string>
    <string name="upomp_bypay_accountmain_username">" 用 户 名 :"</string>
    <string name="upomp_bypay_accountmain_email">邮箱地址:</string>
    <string name="upomp_bypay_addcard_binduser">绑 定 用 户 :</string>
    <string name="upomp_bypay_addcard_cvn2">C V N 2 :</string>
    <string name="upomp_bypay_addcard_selectdefultcard">设置成默认银行卡</string>
    <string name="upomp_bypay_balanceresult_balance">余额查询结果</string>
    <string name="upomp_bypay_balanceresult_balancesucceed">余额查询成功！</string>
    <string name="upomp_bypay_balanceresult_balancefail">余额查询失败！</string>
    <string name="upomp_bypay_balanceresult_balancenumber">您的银行卡余额是</string>
    <string name="upomp_bypay_balanceresult_yuan">元。</string>
    <string name="upomp_bypay_bankrestlt_succeed">添加银行卡成功！</string>
    <string name="upomp_bypay_bankrestlt_fail">添加银行卡失败！</string>
    <string name="upomp_bypay_bankrestlt_cardid">"  卡    号  :"</string>
    <string name="upomp_bypay_bankrestlt_continuebank">继续绑卡</string>
    <string name="upomp_bypay_cardinfo_hint1">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联、余额查询。"</string>
    <string name="upomp_bypay_cardinfo_hint2">"        您可以对该银行卡进行以下操作：默认卡设置、解除关联。"</string>
    <string name="upomp_bypay_cardinfo_removecardsucceed">银行卡解除关联成功!</string>
    <string name="upomp_bypay_cardinfo">银行卡信息</string>
    <string name="upomp_bypay_cardinfo_issuercard">发卡银行:</string>
    <string name="upomp_bypay_cardinfo_cardid">"  卡   号   :"</string>
    <string name="upomp_bypay_cardmainactivity_firstlogin">您尚未登录，请先登录再进行银行卡管理操作。</string>
    <string name="upomp_bypay_cardmainactivity_defultcard">(默认卡)</string>
    <string name="upomp_bypay_cardmainactivity_cancelbanksucced">取消绑定成功!</string>
    <string name="upomp_bypay_cardmainactivity_issuedcard">"发卡行: "</string>
    <string name="upomp_bypay_cardmainactivity_cardtype">"
卡类型: "</string>
    <string name="upomp_bypay_cardmainactivity_cardid">"
    卡号: "</string>
    <string name="upomp_bypay_cardmainactivity_close">关闭</string>
    <string name="upomp_bypay_cardmain_relevancecard">你已关联的银行卡:</string>
    <string name="upomp_bypay_cardmain_norelevancecard">你还没有关联的银行卡！</string>
    <string name="upomp_bypay_cardmain_hint1">"        请点击添加银行卡按钮添加银行卡！"</string>
    <string name="upomp_bypay_cardmain_hint2">"        选择您绑定的银行卡后，您可以进行以下操作：查看银行卡信息；默认卡设置；银行卡删除；余额查询！"</string>
    <string name="upomp_bypay_editinfoactivity_nochange">新手机号码与原手机号码一样，无需进行修改。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum">请输入原手机号码。</string>
    <string name="upomp_bypay_editinfoactivity_inputtelnum1">原手机号码格式有误，应为11位数字。</string>
    <string name="upomp_bypay_editinfoactivity_changetelfail">更改手机号码失败！</string>
    <string name="upomp_bypay_editinfoactivity_changetelsucceed">更改手机号码成功！</string>
    <string name="upomp_bypay_editinfo_registertel">已注册手机:</string>
    <string name="upomp_bypay_editinfo_oldtel">原手机号码:</string>
    <string name="upomp_bypay_editinfo_oldtelhint">原手机号码</string>
    <string name="upomp_bypay_editinfo_newtel">新手机号码:</string>
    <string name="upomp_bypay_editinfo_newtelhint">新手机号码</string>
    <string name="upomp_bypay_editinfo_hint">"        如果您的用户名是手机号，您将不能修改手机号。"</string>
    <string name="upomp_bypay_editpassactivity_inputoldpsw">请输入原密码。</string>
    <string name="upomp_bypay_editpassactivity_oldpswfail">原密码格式有误，长度应为6-12位。</string>
    <string name="upomp_bypay_editpass_oldpsw">"原   密   码  :"</string>
    <string name="upomp_bypay_editpass_oldpswhint">原密码</string>
    <string name="upomp_bypay_getpassactivity_updatepsw">密码重置</string>
    <string name="upomp_bypay_loginactivity_userlogin">用户登录</string>
    <string name="upomp_bypay_loginactivity_loginsucceed">登录成功!</string>
    <string name="upomp_bypay_loginactivity_loginfail">登录失败!</string>
    <string name="upomp_bypay_login_username">"用   户   名  :"</string>
    <string name="upomp_bypay_login_psw">"   密      码   :"</string>
    <string name="upomp_bypay_login_webvalidcode">"校   验   码  :"</string>
    <string name="upomp_bypay_login_hint">"        请使用中国银联的注册帐号及密码登录，为保证账户安全，如果您连续五次输错密码，您的账号将被锁定三个小时，给您带来的不便敬请原谅！"</string>
    <string name="upomp_bypay_pay_it_previewdifferent">若与您预设的资料不符，极有可能是钓鱼软件，请终止支付。</string>
    <string name="upomp_bypay_pay_it_approvepay">认证支付</string>
    <string name="upomp_bypay_pay_it_expresspay">快捷支付</string>
    <string name="upomp_bypay_pay_it_valuecardpay">储值卡支付</string>
    <string name="upomp_bypay_pay_it_preventfish">"        为防止钓鱼应用，请核对您收到的95516发送的短信中，安全提示信息是否为："</string>
    <string name="upomp_bypay_pay_it_bankmobilenum">发卡行预留的手机号</string>
    <string name="upomp_bypay_pay_it_securitycode">"   密      码    :"</string>
    <string name="upomp_bypay_pay_it_pleaseaddcard">您还未关联过银行卡，请先添加银行卡。</string>
    <string name="upomp_bypay_pay_it_paycardnum">支 付 卡 号 :</string>
    <string name="upomp_bypay_pay_it_other">其他</string>
    <string name="upomp_bypay_pay_it_valueacrdtype">储值卡类型:</string>
    <string name="upomp_bypay_pay_it_choosevalueacrdtype">请选择储值卡类型</string>
    <string name="upomp_bypay_pay_it_valueacrdnum">储值卡卡号:</string>
    <string name="upomp_bypay_pay_it_valueacrdcode">储值卡密码:</string>
    <string name="upomp_bypay_pay_it_secondcheckcode">"校   验    码:"</string>
    <string name="upomp_bypay_pay_it_cvn2">"C  V  N   2  :"</string>
    <string name="upomp_bypay_pay_it_cardid">储值卡卡号</string>
    <string name="upomp_bypay_pay_it_cardpsw">储值卡密码</string>
    <string name="upomp_bypay_pay_it_inputtel">请重新点击“获取”按钮，获取最新短信验证码。</string>
    <string name="upomp_bypay_pay_it_getmac">请先点击“获取”按钮，获取最新短信校验码。</string>
    <string name="upomp_bypay_pay_it_macfail">短信验证码不正确，请重新填写!</string>
    <string name="upomp_bypay_pay_it_getlistfail">读取储值卡列表错误！</string>
    <string name="upomp_bypay_pay_it_selectcard">银行卡选择</string>
    <string name="upomp_bypay_pay_it_defultcard">（默认）</string>
    <string name="upomp_bypay_pay_it_changecard">银行卡变更</string>
    <string name="upomp_bypay_pay_it_yesornopay">是否选择此卡进行支付？[</string>
    <string name="upomp_bypay_pay_it_selectmm">请选择有效期月份</string>
    <string name="upomp_bypay_pay_it_selectyy">请选择有效期年份</string>
    <string name="upomp_bypay_pay_it_hint_normal">只需验证发卡行预留手机号及银行卡信息（信用卡验证有效期和CVN2，借记卡验证卡密码），即可完成支付。</string>
    <string name="upomp_bypay_pay_it_hint_auth">银联在线支付注册用户可通过验证用户密码，选择绑定的银行卡并验证手机短信验证码，即可完成支付。</string>
    <string name="s_image">image</string>
    <string name="s_hint_phone">添加联系人</string>
    <string name="s_save">保存</string>
    <string name="s_ok">确定</string>
    <string name="s_cancel">取消</string>
    <string name="s_hint_sms_content">输入短信内容</string>
    <string name="s_hint_statusbar_title">标题</string>
    <string name="s_hint_statusbar_content">内容</string>
    <string name="private_comm_btn_back">返回</string>
    <string name="private_comm_btn_sure">确定</string>
    <string name="private_comm_btn_cancle">取消</string>
    <string name="private_comm_text_name">名称</string>
    <string name="private_comm_text_phonenum">电话号码(必填)</string>
    <string name="private_comm_radio_normal">正常接听</string>
    <string name="private_comm_radio_stop">立即挂断</string>
    <string name="private_comm_add_contact">新建隐私联系人</string>
    <string name="add_pwd_title">创建密码本</string>
    <string name="add_pwd_name">名称（必填）</string>
    <string name="add_pwd_site">网站（选填）</string>
    <string name="add_pwd_number">账号（选填）</string>
    <string name="add_pwd_pwd">密码（必填）</string>
    <string name="strongbox_buttonbar_delete">销毁</string>
    <string name="strongbox_buttonbar_descryption">移出保险箱</string>
    <string name="strongbox_buttonbar_selectall">全选</string>
    <string name="rs_input_sms_type">请选择短信类型</string>
    <string name="rs_input_sms_date">请选择短信日期</string>
    <string name="rs_input_sms_time">请选择短信时间</string>
    <string name="privacy_pop_see">查看</string>
    <string name="privacy_pop_destory">销毁</string>
    <string name="privacy_pop_restore">还原</string>
    <string name="scene_mode_eidt_dialog_title">选择操作</string>
    <string name="scene_mode_eidt_dialog_delete">删除</string>
    <string name="scene_mode_eidt_dialog_rename">重命名</string>
</resources>