<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/buttonbar_bg"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/delete"
        style="@style/btn_gray"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/strongbox_buttonbar_delete" />

    <Button
        android:id="@+id/descrypt"
        style="@style/btn_green"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:ellipsize="start"
        android:text="@string/strongbox_buttonbar_descryption" />

    <Button
        android:id="@+id/select_all"
        style="@style/btn_gray"
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/strongbox_buttonbar_selectall" />

</LinearLayout>