<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/ll_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="@dimen/d_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_view_marginTop">

                <EditText
                    android:id="@id/phoneNumber"
                    style="@style/text_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_hint_phone"
                    android:inputType="phone" />

                <ImageView
                    android:id="@id/chooseContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center"
                    android:contentDescription="@string/s_image"
                    android:src="@drawable/btn_add_selector" />
            </FrameLayout>

            <Button
                android:id="@+id/smsType"
                android:layout_width="@dimen/d_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_view_marginTop"
                android:background="@drawable/choose_selector"
                android:gravity="center"
                android:text="@string/rs_input_sms_type"
                android:paddingLeft="@dimen/d_btn_paddingLeft"
                android:textColor="@color/c_common_text" />

            <Button
                android:id="@id/smsDate"
                android:layout_width="@dimen/d_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_view_marginTop"
                android:background="@drawable/choose_selector"
                android:gravity="center"
                android:text="@string/rs_input_sms_date"
                android:paddingLeft="@dimen/d_btn_paddingLeft"
                android:textColor="@color/c_common_text" />

            <Button
                android:id="@id/smsTime"
                android:layout_width="@dimen/d_view_width"
                android:layout_height="wrap_content"
                android:text="@string/rs_input_sms_time"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_view_marginTop"
                android:background="@drawable/choose_selector"
                android:gravity="center"
                android:paddingLeft="@dimen/d_btn_paddingLeft"
                android:textColor="@color/c_common_text" />

            <EditText
                android:id="@id/smsContent"
                style="@style/text_input_full"
                android:layout_width="@dimen/d_view_width"
                android:layout_height="100.0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_view_marginTop"
                android:gravity="top|left|center"
                android:hint="@string/s_hint_sms_content" />

            <Button
                android:id="@id/save"
                android:layout_width="@dimen/d_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/d_view_marginTop"
                android:background="@drawable/btn_long_selector"
                android:text="@string/s_save"
                android:textColor="@color/c_common_text" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>