<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <include layout="@layout/private_comm_title"
         android:id="@+id/rl_title"/> 
    
     <RelativeLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title"
        android:background="@color/private_comm_listview_bkg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/sms_ll_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/private_comm_listview_bkg"
            android:orientation="horizontal"
            android:padding="5dip" >

            <Button
                android:id="@+id/bt_sure"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/private_comm_btn_sure"
                android:textColor="@color/sms_text_content_unseleted" />

            <Button
                android:id="@+id/bt_cancle"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/private_comm_btn_cancle"
                android:textColor="@color/sms_text_content_unseleted" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/private_comm_text_name" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/private_comm_text_phonenum" />

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- 第一個RadioButton -->

                <RadioButton
                    android:id="@+id/myRadioButton1"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/private_comm_radio_normal"/>
                <!-- 第二個RadioButton -->

                <RadioButton
                    android:id="@+id/myRadioButton2"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/private_comm_radio_stop"/>
            </RadioGroup>
        </LinearLayout>
    </RelativeLayout>

    

</RelativeLayout>