<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="329dp"
    android:layout_height="wrap_content"
    android:background="@color/private_comm_listview_bkg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/scene_mode_eidt_dialog_title"
        android:textColor="#1D5A92"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#1D5A92" />

    <LinearLayout
        android:id="@+id/ll_delete"
        android:layout_width="match_parent"
        android:layout_height="67dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:text="@string/scene_mode_eidt_dialog_delete"
            android:textColor="#5a5a5b"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#acacac" />

    <LinearLayout
          android:id="@+id/ll_rename"
        android:layout_width="match_parent"
        android:layout_height="67dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:clickable="true"
        android:focusable="true" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dip"
            android:text="@string/scene_mode_eidt_dialog_rename"
            android:textColor="#5a5a5b"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>